# everybody_codes

./: .gitignore  Cargo.toml  README.md  bacon.toml
ebc2024/: Cargo.toml
ebc2024/inputs/: quest01.3.txt  quest01.txt  quest02.3.txt  quest03.1.txt  quest03.3.txt  quest04.1.txt  quest04.2.txt  quest04.3.txt  quest05.1.txt  quest06.1.txt  quest06.2.txt  quest07.1.txt  quest09.2.txt  quest10.1.txt  quest11.2.txt  quest12.1.txt  quest12.2.txt  quest16.1.txt  quest16.2.txt  quest16.3.txt  quest18.1.txt  quest18.2.txt  quest19.1.txt  quest19.2.txt  quest20.1.txt  quest20.2.txt  quest20.3.txt
ebc2024/src/: main.rs
ebclib/: Cargo.toml
ebclib/src/: lib.rs
koa2024/: Cargo.toml
koa2024/inputs/: quest01.2.txt  quest02.1.txt  quest02.2.txt  quest03.2.txt  quest05.2.txt  quest07.2.txt  quest08.1.txt  quest09.1.txt  quest10.2.txt  quest11.1.txt  quest13.1.txt  quest13.2.txt  quest14.1.txt  quest14.2.txt  quest15.1.txt  quest15.2.txt  quest17.1.txt  quest17.2.txt
