[package]
name = "ebc2024"
version = "0.1.0"
edition = "2024"

[dependencies]
ebclib = {path = "../ebclib"}
puzlib = {git = "https://github.com/mrrobotman/puzlib.git"}
num = "0.4.3"

[[bin]]
name = "ebc2024q01"

[[bin]]
name = "ebc2024q02"

[[bin]]
name = "ebc2024q03"

[[bin]]
name = "ebc2024q04"

[[bin]]
name = "ebc2024q05"

[[bin]]
name = "ebc2024q06"

[[bin]]
name = "ebc2024q07"

[[bin]]
name = "ebc2024q08"

[[bin]]
name = "ebc2024q09"

[[bin]]
name = "ebc2024q10"

[[bin]]
name = "ebc2024q11"

[[bin]]
name = "ebc2024q12"


[[bin]]
name = "ebc2024q13"

